# personal-dev-assistant

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.yaml  docker-compose.yml  pyproject.toml
demo_challenges/: __init__.py  spec_stats_utils.py  spec_string_utils.py  stats_utils.py  string_utils.py
demo_project/: calculator.py  test_calculator.py
docs/: architecture.md  context-strategy.md  demo-plan.md  demo-script.md  development-log.md  pitch.md  requirements.md  safety-policy.md  technical-spec.md  test-plan.md
prompts/: coder_agent.md  explorer_agent.md  main_agent.md  planner_agent.md  reviewer_agent.md  system_prompt.md
src/personal_dev_assistant/: __init__.py  cli.py  config.py  interactive.py  models.py  run_agent.py
src/personal_dev_assistant/agents/: __init__.py  main.py  protocol.py  subagents.py
src/personal_dev_assistant/budget/: __init__.py  monitor.py
src/personal_dev_assistant/context/: __init__.py  compaction.py
src/personal_dev_assistant/demo/: __init__.py  runner.py
src/personal_dev_assistant/interactive/: __init__.py  assistant.py  bug_patterns.py  intents.py  parsing.py  review.py  (+1 more)
tests/: conftest.py  test_bash_tool.py  test_bug_patterns.py  test_config.py  test_context_compaction.py  test_demo_runner.py  test_filesystem_tools.py  test_interactive.py  test_interactive_llm_intents.py  test_llm_client.py  test_main_agent.py  test_models.py  test_partial_edit.py  test_propose_edit.py  test_propose_edit_review.py  test_protocol.py  test_run_agent.py  test_safety.py  test_subagents.py  test_token_budget.py
(+10 files in other folders)
